Updated Collector Dashboard UI, QR Scan, MapView backend configs